gcc/testsuite/rust/rustc/ui/error-codes/E0648.rs
#[export_name="\0foo"] // { dg-error ".E0648." "" { target *-*-* } }
pub fn bar() {}

fn main() {}

